--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        <title>Django Girls blog</title>
+        <title>Bethan's Fancy Django Girls blog</title>
     </head>
     <body>
       <body>
@@ -14,7 +14,7 @@
     {% if user.is_authenticated %}
     <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 {% endif %}
-      <h1><a href="/">Django Girls Blog</a></h1>
+      <h1><a href="/">Bethan's fancy Django Girls blog</a></h1>
   </div>
   <div class="content container">
       <div class="row">
