--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -16,6 +16,7 @@
 {% endif %}
       <h1><a href="/">Bethan's fancy Django Girls blog</a></h1>
   </div>
+  <img src="http://i.giphy.com/srbiWWa0VW2YM.gif"/>
   <div class="content container">
       <div class="row">
           <div class="col-md-8">
