--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,11 +1,11 @@
 .page-header {
-    background-color: #ff9400;
+    background-color: #4400FF;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
+    color: #00FFC3;
     font-size: 36pt;
     text-decoration: none;
 }
@@ -15,7 +15,7 @@
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Lobster', cursive;
+    font-family: 'Comic Sans MS', cursive;
 }
 
 .date {
@@ -31,7 +31,7 @@ h1, h2, h3, h4 {
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
+    color: #FF003C;
     float: right;
     font-size: 26pt;
     margin-right: 20px;
